feat: optimized docker build